# LambdaAnalysis

./: .gitignore  CMakeLists.txt  RunAlgoTPCLines.C  RunAlgoTPCLines.cpp  config.txt  runFRANS.sh  runtpclines.sh  setup.sh
scripts/: AlphaFRAMSSelectionTMVA_BDT.weights.xml  CMakeLists.txt  FRANSSelectionTMVA_BDT_ViewCWithWidth.weights.xml  FRANSSelectionTMVA_BDT_ViewCWithWidth_Iota.weights.xml  FRANSSelectionTMVA_BDT_ViewUWithWidth_Iota.weights.xml  FRANSSelectionTMVA_BDT_ViewVWithWidth_Iota.weights.xml  NEWAlphaFRAMSSelectionTMVA_BDT.weights.xml  NEWFRAMSSelectionTMVA_BDT.weights.xml  NoAlphaFRAMSSelectionTMVA_BDT.weights.xml  ResAlphaFRAMSSelectionTMVA_BDT.weights.xml  find_path_to_files.sh  runHandScanEvents.sh  runHandScanEvents2.sh  run_bkg_handscan.sh
src/: CMakeLists.txt  RunAlgoFRANS.cpp  RunAlgoTPCLines.cpp  TPCLinesAlgo.cpp  TPCLinesAlgo.h  TPCLinesDBSCAN.cpp  TPCLinesDirectionRecoUtils.cpp  TPCLinesDisplay.cpp  TPCLinesHough.cpp  TPCLinesHough.h  TPCLinesTrackFinder.cpp  TPCLinesTrackFinder.h  TPCLinesVertexFinder.cpp  TPCLinesVertexFinder.h
src/Analysis/: CutDefinitions.C  CutEfficienciesDefinitions.C  CutEfficienciesLATeXInterface.C  CutEfficienciesStyle.C  DirtAnalysis.C  LambdaAnalysis.C  LambdaBDTAnalysis.C  LambdaEvaluateBDTAnalysis.C  LambdaEvaluateMVAAnalysis.C  LambdaMVAAnalysis.C  LambdaPlot2DDistributions.C  LoadAnalysisMacros.C  MacroComputeXSec.C  MacroNuScoreAna.C  MacroRecoVertexResolution.C  PlotCalorimetryDisplay.C  PlotRecoKinematics.C
src/EventHandle/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  LambdaAnaTree.cpp  LambdaAnaTree.h  SEventHandle.cpp  SEventHandle.h  SParserConfig.h  STPCAnalyzerTreeReader.cpp  STPCAnalyzerTreeReader.h
src/FRAMS/: CMakeLists.txt  FRAMSAna_module.cc  VertexMult_module.cc
src/FRAMS/ChargeDensity/: CMakeLists.txt  ChargeDensity.cc  ChargeDensity.hh  ChargeDensityAlgConf.hh  LeastSquares.hh
src/FRAMS/config/: framsana_config.fcl  vertexmult_config.fcl
src/FRAMS/job/: run_frams_BG.fcl  run_frams_filterBG.fcl  run_vertexmult.fcl
src/FRANS/: CMakeLists.txt  ChargeDensity.cpp  ChargeDensity.h  ChargeDensityPset.h  FRANSObj.cpp  FRANSObj.h  FRANSTTreeHandle.h  FRANSTree.cpp  FRANSTree.h  VertexView.h  classes.h  classes_def.xml  frans_config.fcl
src/FRANS/LArSoft/: ChargeDensityAlgConf.h  FRAMSFilter_module.cc
src/FRANS/LArSoft/config/: framsfilter_config.fcl
src/FRANS/LArSoft/job/: run_frams.fcl  run_frams_S.fcl  run_frams_filterS.fcl  run_frams_filterS_gapcut.fcl
src/FRANSAna/: CommandLineParser.cpp  FRANSAnaCommandLineParser.h  FRANSPlotUtils.C  LoadFRANSAna.C  MacroCombineViews.C  MacroCompareROCs.C  MacroConvertToTTree.py  MacroFRAMSEvaluate.C  MacroFRAMSTraining.C  MacroFRANSEvaluate.C  MacroFRANSPlotVariables.C  MacroFRANSTraining.C  MacroMergeTTrees.C
src/Parser/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h
src/SObjects/: CMakeLists.txt  LambdaAnaTree.cpp  LambdaAnaTree.h  TPCLinesDistanceUtils.cpp  TPCLinesDistanceUtils.h  TPCLinesHitDistanceUtils.cpp  TPCLinesHitDistanceUtils.h  TPCLinesPCA.cpp  TPCLinesPCA.h  TPCLinesParameters.cpp  TPCLinesParameters.h  TPCSimpleCalo.cpp  TPCSimpleCalo.h  TPCSimpleClusters.cpp  TPCSimpleClusters.h  TPCSimpleEvents.cpp  TPCSimpleEvents.h  TPCSimpleHits.cpp  TPCSimpleHits.h  TPCSimpleLines.cpp  TPCSimpleLines.h  TPCSimpleTriangles.cpp  TPCSimpleTriangles.h
src/TPCLinesAlgo/: CMakeLists.txt  TPCLinesAlgo.cpp  TPCLinesAlgo.h  TPCLinesDBSCAN.cpp  TPCLinesDBSCAN.h  TPCLinesDirectionRecoUtils.cpp  TPCLinesDirectionRecoUtils.h  TPCLinesDisplay.cpp  TPCLinesDisplay.h  TPCLinesHough.cpp  TPCLinesHough.h  TPCLinesParameters.cpp  TPCLinesParameters.h  TPCLinesTrackFinder.cpp  TPCLinesTrackFinder.h  TPCLinesVertexFinder.cpp  TPCLinesVertexFinder.h  TPCSimpleCalo.cpp  TPCSimpleCalo.h
src/config/: CMakeLists.txt  caloalg_config.fcl  chargedensityalg_config.fcl  config.txt  houghalg_config.fcl  tpclinesalg_config.fcl  trackfinderalg_config.fcl  vertexfinderalg_config.fcl
